# Mental-Health-Companion

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  app.py  azure_mongoDB.py  azure_openai_client.py  config.py  langchain_setup.py  model.py  package-lock.json  requirements.txt  run.py
.github/workflows/: azure-static-web-apps-green-sand-04b157b0f.yml  azure-static-web-apps-lemon-forest-0b12e820f.yml  azure-static-web-apps-polite-ground-0eff54d0f.yml  cosmosdb_ci_cd.yml  dev_earlent.yml  earlent-AutoDeployTrigger-63bcd090-148d-46b7-b34b-2cb4b1971f2a.yml  main_mental-health-app-api.yml  main_mental-health-app-web.yml  server-ci-dev.yml
backend/: .gitignore  app.py  requirements.txt
backend/classes/: ai_agent.py  cosmic_works_ai_agent.py
client/: .env  .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  service-worker.js  vite.config.js
client/public/: index.html
client/src/: App.jsx  main.jsx  protectedRoute.jsx  serviceWorker.js
client/src/Actions/: userAction.jsx
client/src/Assets/Styles/: ChatComponent.module.css  MoodLogging.css  MoodLogs.css  signUp.css
client/src/Components/: AboutPage.jsx  FAQPage.jsx  Home.jsx  LandingPage.jsx  Routine.jsx  SignUp.jsx  TopBar.jsx  authComponent.jsx  chatComponent.jsx  chatInterface.jsx  chatLogManager.jsx  chatLomManager.jsx  checkInForm.jsx  checkInsList.jsx  moodLogging.jsx  moodLogs.jsx  moodTracker.jsx  navBar.jsx  passwordReset.jsx  passwordUpdateTab.jsx  requestPasswordReset.jsx  sideBar.jsx  userContext.jsx  userProfile.jsx
client/src/Components/Nav/: NavTemp.jsx
client/src/Components/Pages/: About.jsx  Chat.jsx  CheckIn.jsx  Dashboard.jsx  Home.jsx  NotFound.jsx  Resources.jsx  Settings.jsx
client/src/Components/reusables/: DialogBox.jsx
client/src/Hooks/: useApi.jsx
client/src/Reducers/: userReducer.jsx
client/src/Utils/: axiosInstance.jsx
client/src/api/: axios.js
my-mental-health-app/: README.md  angular.json  package-lock.json  package.json
my-mental-health-app/src/: index.html
my-mental-health-app/src/app/: app.component.spec.ts  app.component.ts
server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  map.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt
server/agents/: ai_agent.py  mental_health_agent.py  tools.py
server/classes/: ai_agent.py  cosmic_works_ai_agent.py
server/config/: config.py
server/instance/: mydatabase.db
server/models/: agent_fact.py  ai_request.py  ai_response.py  chat_summary.py  chat_turn.py  check_in.py  search.py  subscription.py  therapy_material.py  user.py  user_entity.py  user_journey.py  user_material.py
server/routes/: __init__.py  ai.py  checkIn.py  check_in.py  scheduler.py  scheduler_main.py  search.py  user.py
server/services/: azure.py  azure_mongodb.py  my_azure.py  scheduler.py  scheduler_main.py  speech_service.py
server/services/db/: agent_facts.py  mood_log.py  user.py  user_journey.py
server/tests/: conftest.py  test_app.py  test_user.py
server/tools/: azure_mongodb.py  langchain.py
server/utils/: agents.py  consts.py  delete_user_data.py  docs.py  search_format.py  update_agent_facts.py
