[tool.poetry]
name = "earlent-server"
version = "1.1.3"
description = "An application meant to help students and professionals with stress and anxiety."
authors = ["Dhrumil Patel <you@example.com>", "Anthony Santana <anthony@jasantana.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.5"
pymongo = "^4.7.3"
pydantic = {extras = ["email"], version = "^2.7.4"}
Flask = "^3.0.3"
Flask-JWT-Extended = "^4.6.0"
python-dotenv = "^1.0.1"
mongomock = "^4.1.2"
azure-cognitiveservices-speech = "^1.38.0"
langchain-community = "^0.2.5"
flask-cors = "^4.0.1"
langchain-mongodb = "^0.1.6"
langchain-openai = "^0.1.8"
gunicorn = "^22.0.0"
flask-mail = "^0.10.0"
motor = "^3.5.0"
azure-mgmt-maps = "^2.1.0"
azure-identity = "^1.17.1"
googlemaps = "^4.10.0"
langchain-google-community = "^1.0.8"


[tool.poetry.group.dev.dependencies]
langsmith = "^0.1.80"
flask-sqlalchemy = "^3.1.1"
schedule = "^1.2.2"
pywebpush = "^2.0.0"
pytest = "^8.2.2"
pytest-env = "^1.1.3"
pytest-timeout = "^2.3.1"
setuptools = "^70.1.1"

[tool.pytest.ini_options]
env = [
    "log_cli = true",
    "log_cli_level = INFO",
    "FLASK_ENV = test",
    "cache_dir = ./server"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
